--- a/package.json
+++ b/package.json
@@ -16,17 +16,18 @@
     "@angular/common": "~13.1.1",
     "@angular/compiler": "~13.1.1",
     "@angular/core": "~13.1.1",
-    "@angular/fire": "^6.1.5",
+    "@angular/fire": "^7.2.0",
     "@angular/forms": "~13.1.1",
     "@angular/material": "^13.1.1",
     "@angular/platform-browser": "~13.1.1",
     "@angular/platform-browser-dynamic": "~13.1.1",
     "@angular/router": "~13.1.1",
     "dayjs": "^1.10.6",
-    "firebase": "^8.8.0",
+    "firebase": "^9.4.0",
     "rxjs": "~6.6.7",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "rxfire": "^6.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.1.2",
