--- a/package.json
+++ b/package.json
@@ -17,35 +17,35 @@
     "@angular/compiler": "~13.1.1",
     "@angular/core": "~13.1.1",
     "@angular/fire": "^7.2.0",
+    "@angular/flex-layout": "^13.0.0-beta.36",
     "@angular/forms": "~13.1.1",
     "@angular/material": "^13.1.1",
     "@angular/platform-browser": "~13.1.1",
     "@angular/platform-browser-dynamic": "~13.1.1",
     "@angular/router": "~13.1.1",
-    "dayjs": "^1.10.6",
-    "firebase": "^9.4.0",
-    "rxjs": "~6.6.7",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "rxfire": "^6.0.0"
+    "firebase": "9.6.1",
+    "dayjs": "^1.10.7",
+    "rxjs": "~7.5.1",
+    "tslib": "^2.3.1",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.1.2",
     "@angular/cli": "~13.1.2",
     "@angular/compiler-cli": "~13.1.1",
-    "@types/jasmine": "~3.8.1",
-    "@types/node": "^16.4.5",
+    "@types/jasmine": "~3.10.3",
+    "@types/node": "^17.0.8",
     "codelyzer": "^6.0.2",
-    "jasmine-core": "~3.8.0",
+    "jasmine-core": "~4.0.0",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.3.4",
+    "karma": "~6.3.9",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
+    "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
-    "ts-node": "~10.1.0",
+    "ts-node": "~10.4.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.4.4"
+    "typescript": "~4.5.4"
   }
 }
