--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^13.1.2",
     "@angular/animations": "~13.1.1",
     "@angular/cdk": "^13.1.1",
     "@angular/common": "~13.1.1",
@@ -23,15 +24,14 @@
     "@angular/platform-browser": "~13.1.1",
     "@angular/platform-browser-dynamic": "~13.1.1",
     "@angular/router": "~13.1.1",
-    "firebase": "9.6.1",
     "dayjs": "^1.10.7",
+    "firebase": "9.6.1",
     "rxjs": "~7.5.1",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.2",
-    "@angular/cli": "~13.1.2",
+    "@angular/cli": "^13.1.1",
     "@angular/compiler-cli": "~13.1.1",
     "@types/jasmine": "~3.10.3",
     "@types/node": "^17.0.8",
@@ -46,6 +46,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~10.4.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.5.4"
+    "typescript": "^4.4.4"
   }
 }
