--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^13.3.0",
-    "@angular/animations": "~13.3.0",
+    "@angular-devkit/build-angular": "^14.0.0",
+    "@angular/animations": "^14.0.0",
     "@angular/cdk": "^13.3.0",
-    "@angular/common": "~13.3.0",
-    "@angular/compiler": "~13.3.0",
-    "@angular/core": "~13.3.0",
+    "@angular/common": "^14.0.0",
+    "@angular/compiler": "^14.0.0",
+    "@angular/core": "^14.0.0",
     "@angular/fire": "^7.2.1",
     "@angular/flex-layout": "^13.0.0-beta.38",
-    "@angular/forms": "~13.3.0",
+    "@angular/forms": "^14.0.0",
     "@angular/material": "^13.3.0",
-    "@angular/platform-browser": "~13.3.0",
-    "@angular/platform-browser-dynamic": "~13.3.0",
-    "@angular/router": "~13.3.0",
+    "@angular/platform-browser": "^14.0.0",
+    "@angular/platform-browser-dynamic": "^14.0.0",
+    "@angular/router": "^14.0.0",
     "dayjs": "^1.11.0",
     "firebase": "9.6.9",
     "rxjs": "~7.5.5",
@@ -31,8 +31,8 @@
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular/cli": "^13.3.0",
-    "@angular/compiler-cli": "~13.3.0",
+    "@angular/cli": "^14.0.0",
+    "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^17.0.21",
     "codelyzer": "^6.0.2",
