--- a/package.json
+++ b/package.json
@@ -4,35 +4,34 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration production",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^14.2.9",
-    "@angular/animations": "^14.2.10",
+    "@angular-devkit/build-angular": "^15.0.3",
+    "@angular/animations": "^15.0.3",
     "@angular/cdk": "^14.2.7",
-    "@angular/common": "^14.2.10",
-    "@angular/compiler": "^14.2.10",
-    "@angular/core": "^14.2.10",
+    "@angular/common": "^15.0.3",
+    "@angular/compiler": "^15.0.3",
+    "@angular/core": "^15.0.3",
     "@angular/fire": "^7.4.1",
     "@angular/flex-layout": "^14.0.0-beta.40",
-    "@angular/forms": "^14.2.10",
+    "@angular/forms": "^15.0.3",
     "@angular/material": "^14.2.7",
-    "@angular/platform-browser": "^14.2.10",
-    "@angular/platform-browser-dynamic": "^14.2.10",
-    "@angular/router": "^14.2.10",
+    "@angular/platform-browser": "^15.0.3",
+    "@angular/platform-browser-dynamic": "^15.0.3",
+    "@angular/router": "^15.0.3",
     "dayjs": "^1.11.6",
     "firebase": "9.13.0",
     "rxjs": "~7.5.7",
-    "tslib": "^2.4.1",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular/cli": "^14.2.9",
-    "@angular/compiler-cli": "^14.2.10",
+    "@angular/cli": "^15.0.3",
+    "@angular/compiler-cli": "^15.0.3",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^18.11.9",
     "codelyzer": "^6.0.2",
@@ -45,6 +44,7 @@
     "karma-jasmine-html-reporter": "^2.0.0",
     "protractor": "~7.0.0",
     "ts-node": "~10.9.1",
+    "tslib": "^2.4.1",
     "typescript": "^4.8.4"
   }
 }
