--- a/package.json
+++ b/package.json
@@ -11,27 +11,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^15.1.6",
-    "@angular/animations": "^15.1.5",
+    "@angular-devkit/build-angular": "^16.0.0-rc.1",
+    "@angular/animations": "^16.0.0-rc.2",
     "@angular/cdk": "^15.1.5",
-    "@angular/common": "^15.1.5",
-    "@angular/compiler": "^15.1.5",
-    "@angular/core": "^15.1.5",
+    "@angular/common": "^16.0.0-rc.2",
+    "@angular/compiler": "^16.0.0-rc.2",
+    "@angular/core": "^16.0.0-rc.2",
     "@angular/fire": "^7.5.0",
     "@angular/flex-layout": "^14.0.0-beta.40",
-    "@angular/forms": "^15.1.5",
+    "@angular/forms": "^16.0.0-rc.2",
     "@angular/material": "^15.1.5",
-    "@angular/platform-browser": "^15.1.5",
-    "@angular/platform-browser-dynamic": "^15.1.5",
-    "@angular/router": "^15.1.5",
+    "@angular/platform-browser": "^16.0.0-rc.2",
+    "@angular/platform-browser-dynamic": "^16.0.0-rc.2",
+    "@angular/router": "^16.0.0-rc.2",
     "dayjs": "^1.11.7",
     "firebase": "9.17.1",
     "rxjs": "~7.8.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular/cli": "^15.1.6",
-    "@angular/compiler-cli": "^15.1.5",
+    "@angular/cli": "^16.0.0-rc.1",
+    "@angular/compiler-cli": "^16.0.0-rc.2",
     "@types/jasmine": "~4.3.1",
     "@types/node": "^18.14.0",
     "codelyzer": "^6.0.2",
