--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   "dependencies": {
     "@angular-devkit/build-angular": "^16.0.0-rc.1",
     "@angular/animations": "^16.0.0-rc.2",
-    "@angular/cdk": "^15.1.5",
+    "@angular/cdk": "^16.0.0-rc.1",
     "@angular/common": "^16.0.0-rc.2",
     "@angular/compiler": "^16.0.0-rc.2",
     "@angular/core": "^16.0.0-rc.2",
     "@angular/fire": "^7.5.0",
     "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/forms": "^16.0.0-rc.2",
-    "@angular/material": "^15.1.5",
+    "@angular/material": "^16.0.0-rc.1",
     "@angular/platform-browser": "^16.0.0-rc.2",
     "@angular/platform-browser-dynamic": "^16.0.0-rc.2",
     "@angular/router": "^16.0.0-rc.2",
