--- a/package.json
+++ b/package.json
@@ -11,31 +11,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^16.0.0-rc.1",
-    "@angular/animations": "^16.0.0-rc.2",
-    "@angular/cdk": "^16.0.0-rc.1",
-    "@angular/common": "^16.0.0-rc.2",
-    "@angular/compiler": "^16.0.0-rc.2",
-    "@angular/core": "^16.0.0-rc.2",
+    "@angular-devkit/build-angular": "^16.0.2",
+    "@angular/animations": "^16.0.2",
+    "@angular/cdk": "^16.0.1",
+    "@angular/common": "^16.0.2",
+    "@angular/compiler": "^16.0.2",
+    "@angular/core": "^16.0.2",
     "@angular/fire": "^7.5.0",
     "@angular/flex-layout": "^14.0.0-beta.40",
-    "@angular/forms": "^16.0.0-rc.2",
-    "@angular/material": "^16.0.0-rc.1",
-    "@angular/platform-browser": "^16.0.0-rc.2",
-    "@angular/platform-browser-dynamic": "^16.0.0-rc.2",
-    "@angular/router": "^16.0.0-rc.2",
+    "@angular/forms": "^16.0.2",
+    "@angular/material": "^16.0.1",
+    "@angular/platform-browser": "^16.0.2",
+    "@angular/platform-browser-dynamic": "^16.0.2",
+    "@angular/router": "^16.0.2",
     "dayjs": "^1.11.7",
-    "firebase": "9.20.0",
-    "rxjs": "~7.8.0",
+    "firebase": "9.22.0",
+    "rxjs": "~7.8.1",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular/cli": "^16.0.0-rc.1",
-    "@angular/compiler-cli": "^16.0.0-rc.2",
+    "@angular/cli": "^16.0.2",
+    "@angular/compiler-cli": "^16.0.2",
     "@types/jasmine": "~4.3.1",
-    "@types/node": "^18.15.13",
+    "@types/node": "^20.2.1",
     "codelyzer": "^6.0.2",
-    "jasmine-core": "~4.6.0",
+    "jasmine-core": "~5.0.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.2.0",
@@ -44,7 +44,7 @@
     "karma-jasmine-html-reporter": "^2.0.0",
     "protractor": "~7.0.0",
     "ts-node": "~10.9.1",
-    "tslib": "^2.5.0",
+    "tslib": "^2.5.2",
     "typescript": "^5.0.4"
   }
 }
