fix: add tslib path & custom elements schema

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,14 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
+    "typeRoots": [
+      "node_modules/@types",
+      "node_modules/tslib"
+    ],
     "target": "ES2022",
-    "module": "es2020",
+    "module": "ES2022",
     "lib": [
-      "es2018",
+      "ES2022",
       "dom"
     ],
     "skipLibCheck": true,
