--- a/package.json
+++ b/package.json
@@ -4,33 +4,33 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --configuration production",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^16.1.0",
-    "@angular/animations": "^16.1.1",
+    "@angular-devkit/build-angular": "^16.1.5",
+    "@angular/animations": "^16.1.6",
     "@angular/cdk": "^16.1.1",
-    "@angular/common": "^16.1.1",
-    "@angular/compiler": "^16.1.1",
-    "@angular/core": "^16.1.1",
+    "@angular/common": "^16.1.6",
+    "@angular/compiler": "^16.1.6",
+    "@angular/core": "^16.1.6",
     "@angular/fire": "^7.6.1",
-    "@angular/forms": "^16.1.1",
+    "@angular/forms": "^16.1.6",
     "@angular/material": "^16.1.1",
-    "@angular/platform-browser": "^16.1.1",
-    "@angular/platform-browser-dynamic": "^16.1.1",
-    "@angular/router": "^16.1.1",
+    "@angular/platform-browser": "^16.1.6",
+    "@angular/platform-browser-dynamic": "^16.1.6",
+    "@angular/router": "^16.1.6",
     "dayjs": "^1.11.8",
     "firebase": "9.22.2",
     "rxjs": "~7.8.1",
     "zone.js": "~0.13.1"
   },
   "devDependencies": {
-    "@angular/cli": "^16.1.0",
-    "@angular/compiler-cli": "^16.1.1",
+    "@angular/cli": "^16.1.5",
+    "@angular/compiler-cli": "^16.1.6",
     "@types/jasmine": "~4.3.4",
     "@types/node": "^20.3.1",
     "codelyzer": "^6.0.2",
