--- a/package.json
+++ b/package.json
@@ -23,27 +23,27 @@
     "@angular/platform-browser": "^16.1.6",
     "@angular/platform-browser-dynamic": "^16.1.6",
     "@angular/router": "^16.1.6",
-    "dayjs": "^1.11.8",
-    "firebase": "9.22.2",
+    "dayjs": "^1.11.9",
+    "firebase": "^9.23.0",
     "rxjs": "~7.8.1",
     "zone.js": "~0.13.1"
   },
   "devDependencies": {
     "@angular/cli": "^16.1.5",
     "@angular/compiler-cli": "^16.1.6",
-    "@types/jasmine": "~4.3.4",
-    "@types/node": "^20.3.1",
+    "@types/jasmine": "~4.3.5",
+    "@types/node": "^20.4.4",
     "codelyzer": "^6.0.2",
     "jasmine-core": "~5.0.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
     "protractor": "~7.0.0",
     "ts-node": "~10.9.1",
-    "tslib": "^2.5.3",
-    "typescript": "^5.0.3"
+    "tslib": "^2.6.0",
+    "typescript": "^5.1.6"
   }
 }
